--- a/style/main.scss
+++ b/style/main.scss
@@ -9,12 +9,100 @@ p,h1,h2,ul {
   color: $font-color;
 }
 
+.siteTips {
+  text-align: center;
+}
+
+.section {
+  // border:1px #86C2E7;
+  // border-style: dashed solid;
+  border: 2px solid #86C2E7;
+  box-shadow: 2px 2px 6px 2px #d1d0d0;
+}
+
+.landingUI {
+  text-align: center;
+}
+
+// "unvisited"
+.landingUILinks {
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  border:1px #86C2E7;
+  border-style: dashed solid;
+  box-sizing: content-box;
+  padding: 7px;
+  // top, right, bottom, left
+  margin: 10% 1% 1% 5%;
+  // link color "unvisited"
+  color:#000000;
+}
+
+.landingUILinks:visited {
+  color:#000000;
+}
+
+.landingUILinks:hover {
+  background: #18CC86;
+  border: 1px #F5F88A;
+  border-style: dashed solid;
+  color:#FFFFFF;
+}
+
+.landingUILinks:active {
+  color:#000000;
+}
+
 .listExpenses {
   float: right;
   margin: auto;
+  text-align: center;
   padding: 2%;
 }
 
-//.expenseTypeTitle {
-//  color: blue;
-//}
+.gridList {
+  display: grid;
+  padding: 2%;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+}
+
+.one {
+  grid-column: 1 / 3;
+  grid-row: 1;
+}
+
+.two {
+  grid-column: 2 / 4;
+  grid-row: 1 / 3;
+}
+
+.three {
+  grid-column: 1;
+  grid-row: 2 / 5;
+}
+
+.four {
+  grid-column: 3;
+  grid-row: 3;
+}
+
+.five {
+  grid-column: 2;
+  grid-row: 4;
+}
+
+.six {
+  grid-column: 3;
+  grid-row: 4;
+}
+
+.expenseTypeTitle {
+  text-align: center;
+}
+
+.card-form {
+  margin: auto;
+  text-align: center;
+}
