restructured css to individual components, added webpack.prod, updated needed loader packages for new css, anded added login/signup form. Login/signup still need more flow control and backend connection. Doing this next.

--- a/style/vars.scss
+++ b/style/vars.scss
@@ -18,3 +18,9 @@ $list-footer-height: 36px;
 $list-border-radius: 5px;
 $card-border-radius: 3px;
 //--------------------------------------------------------------
+$color-primary: #808080;
+$color-secondary: #ea402c;
+$color-accent: #ffffff;
+$roboto: 'Roboto', sans-serif;
+$proxima: 'Proxima_Nova', sans-serif;
+$buttonHoverBackground: #ff6982;
