--- a/style/main.scss
+++ b/style/main.scss
@@ -1,164 +1,6 @@
-$background-color: #FFFFFF;
-$font-color : #000000;
+@import './vars';
 
-html, body{
-  background: $background-color;
-}
+// currently not using reset... will re-structure/revisit in future if needed
+// @import 'reset';
 
-p,h1,h2,ul {
-  color: $font-color;
-}
-
-.siteTips {
-  text-align: center;
-}
-
-.section {
-  // border:1px #86C2E7;
-  // border-style: dashed solid;
-  border: 2px solid #86C2E7;
-  // box-shadow: 2px 2px 6px 2px #d1d0d0;
-  box-shadow: 2px 2px 6px 2px #7fd2b2;
-}
-
-.sectionTotal {
-  text-align: center;
-  color: #6B6463;
-  margin: 0;
-}
-
-.sectionTotalAmt {
-  color: #900c3f;
-}
-
-.deleteSectionForm {
-  // used to display button on same line as section title
-  // may revisit and generate grid inside of grid?
-  // display: inline;
-}
-
-.deleteExpenseSectionButton {
-  display: inline;
-}
-
-.landingUI {
-  text-align: center;
-}
-
-// "unvisited"
-.landingUILinks {
-  text-decoration: none;
-  font-family: 'Montserrat', sans-serif;
-  border:1px #86C2E7;
-  border-style: dashed solid;
-  box-sizing: content-box;
-  padding: 7px;
-  // top, right, bottom, left
-  margin: 10% 1% 1% 5%;
-  // link color "unvisited"
-  color:#000000;
-}
-
-.landingUILinks:visited {
-  color:#000000;
-}
-
-.landingUILinks:hover {
-  background: #18CC86;
-  border: 1px #F5F88A;
-  border-style: dashed solid;
-  color:#FFFFFF;
-}
-
-.landingUILinks:active {
-  color:#000000;
-}
-
-.expenseTotal {
-  color: #900c3f;
-}
-
-.expenseTotalH3 {
-  // border: 1px black;
-  border: thick double #a9c2cc;
-  width: 20%;
-  text-align: left;
-  padding: 1%;
-}
-
-.listExpenses {
-  float: right;
-  margin: auto;
-  padding: 2%;
-}
-
-.gridList {
-  display: grid;
-  padding: 2%;
-  // grid-auto-columns: minmax(100px, auto);
-  // source of truth: https://developer.mozilla.org/en-US/docs/Web/CSS/repeat
-  grid-template-columns: repeat(5, [col-start] max-content [col-middle] max-content [col-end]);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
-}
-
-.one {
-  grid-column: 1 / 3;
-  grid-row: 1;
-}
-
-.two {
-  grid-column: 2 / 4;
-  grid-row: 1 / 3;
-}
-
-.three {
-  grid-column: 1;
-  grid-row: 2 / 5;
-}
-
-.four {
-  grid-column: 3;
-  grid-row: 3;
-}
-
-.five {
-  grid-column: 2;
-  grid-row: 4;
-}
-
-.six {
-  grid-column: 3;
-  grid-row: 4;
-}
-
-.expenseTypeTitle {
-  // display: inline;
-  text-align: center;
-  // margin-left: 30%;
-  margin: 0;
-}
-
-.updateSectionTitleButton {
-  margin-bottom: 1.0em;
-}
-
-.card-form {
-  margin: auto;
-  text-align: center;
-}
-
-.cardList {
-  color: green;
-  // need the list look (desired spacing), but without the dot...
-  list-style-type: none;
-}
-
-.removeCardButton {
-  margin-right: 1.0em;
-  margin-bottom: 1.0em;
-}
-
-.expenseLineItem {
-  display: inline-flex;
-}
+@import './base';
